--- a/wms-app/package.json
+++ b/wms-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "wms-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.5.0",
-    "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "next": "15.4.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint": "^9",
+    "eslint-config-next": "15.4.6",
+    "@eslint/eslintrc": "^3"
   }
 }
